fix: :bug: fix gap bug in contact-us section

--- a/src/scss/components/contact/contact-us.scss
+++ b/src/scss/components/contact/contact-us.scss
@@ -41,6 +41,10 @@
         margin: 0 auto;
       }
     }
+
+    @media (max-width: $tablet) {
+      flex: none;
+    }
   }
 
   &__image {
